--- a/src/ui/gui/indep-samples.ui
+++ b/src/ui/gui/indep-samples.ui
@@ -299,6 +299,7 @@
                 </child>
                 <child>
                   <object class="PsppireValueEntry" id="group2-entry">
+                    <property name="has-entry">True</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
@@ -312,6 +313,7 @@
                 </child>
                 <child>
                   <object class="PsppireValueEntry" id="group1-entry">
+                    <property name="has-entry">True</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
@@ -349,6 +351,7 @@
                 </child>
                 <child>
                   <object class="PsppireValueEntry" id="cut-point-entry">
+                    <property name="has-entry">True</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
