--- a/src/ui/gui/text-data-import.ui
+++ b/src/ui/gui/text-data-import.ui
@@ -440,7 +440,8 @@ The selected file contains N lines of text.  Only the first M of these will be s
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkComboBoxEntry" id="quote-combo">
+                          <object class="GtkComboBox" id="quote-combo">
+                            <property name="has-entry">True</property>
                             <property name="visible">True</property>
                             <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
                             <property name="has_frame">False</property>
