--- a/src/ui/gui/data-editor.ui
+++ b/src/ui/gui/data-editor.ui
@@ -11,7 +11,7 @@
         </child>
         <child>
           <object class="GtkAction" id="new1">
-            <property name="stock-id">file-new-document</property>
+            <property name="stock-id">file-new-data</property>
             <property name="name">new1</property>
           </object>
         </child>
@@ -29,7 +29,7 @@
         </child>
         <child>
           <object class="GtkAction" id="file_open">
-            <property name="stock-id">file-open-document</property>
+            <property name="stock-id">file-open-data</property>
             <property name="name">file_open</property>
             <property name="label" translatable="yes">_Open...</property>
           </object>
@@ -38,25 +38,25 @@
           <object class="GtkAction" id="file_import">
             <property name="name">file_import</property>
             <property name="label" translatable="yes">I_mport Data...</property>
-	    <property name="stock-id">file-import-document</property>
+	    <property name="stock-id">file-import-data</property>
           </object>
         </child>
         <child>
           <object class="GtkAction" id="rename_dataset">
             <property name="name">rename_dataset</property>
 	    <property name="label" translatable="yes">_Rename Dataset...</property>
-            <property name="stock-id">file-rename-dataset</property>
+            <property name="stock-id">file-rename-data-set</property>
           </object>
         </child>
         <child>
           <object class="GtkAction" id="file_save">
-            <property name="stock-id">file-save-document</property>
+            <property name="stock-id">file-save-data</property>
             <property name="name">file_save</property>
           </object>
         </child>
         <child>
           <object class="GtkAction" id="file_save_as">
-            <property name="stock-id">file-saveas-document</property>
+            <property name="stock-id">file-save-as</property>
             <property name="name">file_save_as</property>
             <property name="label" translatable="yes">Save _As...</property>
           </object>
@@ -122,7 +122,7 @@
         <child>
           <object class="GtkAction" id="view_fonts">
             <property name="name">view_fonts</property>
-            <property name="stock-id">view-fonts</property>
+            <property name="stock-id">view-font</property>
             <property name="label" translatable="yes">_Font...</property>
           </object>
         </child>
@@ -197,7 +197,7 @@
             <property name="name">data_select-cases</property>
             <property name="label" translatable="yes">Select _Cases...</property>
 	    <property name="tooltip" translatable="yes">Choose a subset of cases for analysis</property>
-	    <property name="stock-id">data-select-case</property>
+	    <property name="stock-id">data-select-cases</property>
           </object>
         </child>
         <child>
@@ -247,21 +247,21 @@
           <object class="GtkAction" id="transform_recode-same">
             <property name="name">transform_recode-same</property>
             <property name="label" translatable="yes">Recode into _Same Variables...</property>
-	    <property name="stock-id">transform-recode-same-variables</property>
+	    <property name="stock-id">transform-in-to-same-variables</property>
           </object>
         </child>
         <child>
           <object class="GtkAction" id="transform_recode-different">
             <property name="name">transform_recode-different</property>
             <property name="label" translatable="yes">Recode into _Different Variables...</property>
-	    <property name="stock-id">transform-recode-different-variables</property>
+	    <property name="stock-id">transform-in-to-different-variables</property>
           </object>
         </child>
         <child>
           <object class="GtkAction" id="transform_run-pending">
             <property name="name">transform_run-pending</property>
             <property name="label" translatable="yes">_Run Pending Transforms</property>
-	    <property name="stock-id">transform-runpending-transforms</property>
+	    <property name="stock-id">transform-run-pending</property>
           </object>
           <accelerator key="G" modifiers="GDK_CONTROL_MASK"/>
         </child>
@@ -275,6 +275,7 @@
           <object class="GtkAction" id="descriptive-statistics">
             <property name="name">descriptive-statistics</property>
             <property name="label" translatable="yes">_Descriptive Statistics</property>
+	    <property name="stock-id">tanalyze-descriptive-statistics</property>
           </object>
         </child>
         <child>
@@ -309,6 +310,7 @@
           <object class="GtkAction" id="compare-means">
             <property name="name">compare-means</property>
             <property name="label" translatable="yes">Compare _Means</property>
+	    <property name="stock-id">analyze-compare-means</property>
           </object>
         </child>
         <child>
@@ -355,6 +357,7 @@
             <property name="name">correlation</property>
             <property name="manager">uimanager1</property>
             <property name="label" translatable="yes">Bivariate _Correlation...</property>
+	    <property name="stock-id">analyze-bivariate-correlation</property>
           </object>
         </child>
         <child>
@@ -362,6 +365,7 @@
             <property name="name">k-means</property>
             <property name="manager">uimanager1</property>
             <property name="label" translatable="yes">_K-Means Cluster...</property>
+	    <property name="stock-id">analyze-kmeans-cluster</property>
           </object>
         </child>
         <child>
@@ -369,6 +373,7 @@
             <property name="name">factor-analysis</property>
             <property name="manager">uimanager1</property>
             <property name="label" translatable="yes">Factor _Analysis...</property>
+	    <property name="stock-id">analyze-factor-analysis</property>
           </object>
         </child>
         <child>
@@ -376,12 +381,14 @@
             <property name="name">reliability</property>
             <property name="manager">uimanager1</property>
             <property name="label" translatable="yes">Re_liability...</property>
+	    <property name="stock-id">analyze-realiability</property>
           </object>
         </child>
         <child>
           <object class="GtkAction" id="regression">
             <property name="name">regression</property>
             <property name="label" translatable="yes">_Regression</property>
+	    <property name="stock-id">analyze-regression</property>
           </object>
         </child>
         <child>
@@ -402,6 +409,7 @@
           <object class="GtkAction" id="non-parametrics">
             <property name="name">non-parametrics</property>
             <property name="label" translatable="yes">_Non-Parametric Statistics</property>
+	    <property name="stock-id">analyze-non-parametric-statistics</property>
           </object>
         </child>
         <child>
@@ -446,6 +454,7 @@
             <property name="name">roc-curve</property>
             <property name="manager">uimanager1</property>
             <property name="label" translatable="yes">ROC Cur_ve...</property>
+	    <property name="stock-id">analyze-roc-curve</property>
           </object>
         </child>
         <child>
@@ -460,14 +469,14 @@
             <property name="name">utilities_variables</property>
             <property name="label" translatable="yes">_Variables...</property>
 	    <property name="tooltip" translatable="yes">Jump to variable</property>
-	    <property name="stock-id">utilities-variable</property>
+	    <property name="stock-id">utilities-variables</property>
           </object>
         </child>
         <child>
           <object class="GtkAction" id="utilities_comments">
             <property name="name">utilities_comments</property>
             <property name="label" translatable="yes">Data File _Comments...</property>
-	    <property name="stock-id">utilities-datafile-comments</property>
+	    <property name="stock-id">utilities-data-file-comments</property>
           </object>
         </child>
         <child>
@@ -480,7 +489,7 @@
           <object class="GtkAction" id="windows_minimise_all">
             <property name="name">windows_minimise_all</property>
             <property name="label" translatable="yes">_Minimize All Windows</property>
-	    <property name="stock-id">windows-minimize</property>
+	    <property name="stock-id">windows-minimize-all</property>
           </object>
         </child>
         <child>
