gui: Fix some problems after upgrading flat icons to version 0.2.
→ Replacement icon "about flat icon"
→ Replacement icon "measure string nominal"
→ Added label to Menu|Save
→ Addel label and icon to "sort-ascending" and "sort-descending"
→ Add reference to "analyze descriptive statistics"

--- a/src/ui/gui/data-editor.ui
+++ b/src/ui/gui/data-editor.ui
@@ -52,6 +52,7 @@
           <object class="GtkAction" id="file_save">
             <property name="stock-id">file-save-data</property>
             <property name="name">file_save</property>
+	    <property name="label" translatable="yes">_Save</property>
           </object>
         </child>
         <child>
@@ -275,7 +276,7 @@
           <object class="GtkAction" id="descriptive-statistics">
             <property name="name">descriptive-statistics</property>
             <property name="label" translatable="yes">_Descriptive Statistics</property>
-	    <property name="stock-id">tanalyze-descriptive-statistics</property>
+	    <property name="stock-id">analyze-descriptive-statistics</property>
           </object>
         </child>
         <child>
