Replace checkbox-treeview functions with a object PsppireCheckboxTreeview
Prior to this change there existed a function which operated on
a GtkTreeView which populated it with a model and renderers such
that it would display a list of annotated checkboxes.

This change subclasses GtkTreeView and moves the function to a
method of that class.

I anticipate this will ease implementation of upcoming functionality.

--- a/src/ui/gui/crosstabs.ui
+++ b/src/ui/gui/crosstabs.ui
@@ -355,7 +355,7 @@
                 <property name="vscrollbar_policy">automatic</property>
                 <property name="shadow_type">in</property>
                 <child>
-                  <object class="GtkTreeView" id="cell-view">
+                  <object class="PsppireCheckboxTreeview" id="cell-view">
                     <property name="visible">True</property>
                     <property name="headers_visible">False</property>
                   </object>
@@ -415,7 +415,7 @@
                 <property name="vscrollbar_policy">automatic</property>
                 <property name="shadow_type">in</property>
                 <child>
-                  <object class="GtkTreeView" id="stats-view">
+                  <object class="PsppireCheckboxTreeview" id="stats-view">
                     <property name="width_request">128</property>
                     <property name="height_request">150</property>
                     <property name="visible">True</property>
