--- a/src/ui/gui/descriptives.ui
+++ b/src/ui/gui/descriptives.ui
@@ -141,7 +141,7 @@
                                     <property name="vscrollbar_policy">automatic</property>
                                     <property name="shadow_type">etched-in</property>
                                     <child>
-                                      <object class="GtkTreeView" id="statistics">
+                                      <object class="PsppireCheckboxTreeview" id="statistics">
                                         <property name="height_request">200</property>
                                         <property name="visible">True</property>
                                         <property name="can_focus">True</property>
