--- a/src/ui/gui/data-editor.ui
+++ b/src/ui/gui/data-editor.ui
@@ -328,8 +328,9 @@
           </object>
         </child>
         <child>
-          <object class="GtkAction" id="one-sample-t-test">
+          <object class="PsppireDialogActionTt1s" id="one-sample-t-test">
             <property name="name">one-sample-t-test</property>
+            <property name="manager">uimanager1</property>
             <property name="label" translatable="yes">_One Sample T Test...</property>
           </object>
         </child>
