Change toolbar style such that only icons are displayed and no labels.
The labels occupy too much horizontal space.

--- a/src/ui/gui/data-editor.ui
+++ b/src/ui/gui/data-editor.ui
@@ -636,6 +636,7 @@
     <child>
       <object class="GtkToolbar" constructor="uimanager1" id="toolbar">
         <property name="visible">True</property>
+        <property name="toolbar-style">GTK_TOOLBAR_ICONS</property>
       </object>
     </child>
   </object>
