Provisional new image is added for univariate analysis.
Added a provisional icon to the univariate analysis (experimental).
The image will be updated to a new icon in the next update of
artwork (0.2.1 version).

Changes:
*analyze-univariate-analysis is added
*Smake is edited
*data-editor.ui is edited

--- a/src/ui/gui/data-editor.ui
+++ b/src/ui/gui/data-editor.ui
@@ -358,6 +358,7 @@
             <property name="name">univariate</property>
             <property name="manager">uimanager1</property>
             <property name="label" translatable="yes">_Univariate Analysis...</property>
+	    <property name="stock-id">analyze-univariate-analysis</property>
             <property name="visible">False</property>
           </object>
         </child>
