--- a/src/ui/gui/data-editor.ui
+++ b/src/ui/gui/data-editor.ui
@@ -36,6 +36,7 @@
             <property name="name">file_open</property>
             <property name="label" translatable="yes">_Open...</property>
           </object>
+	  <accelerator key="O" modifiers="GDK_CONTROL_MASK"/>
         </child>
         <child>
           <object class="GtkAction" id="file_import">
@@ -57,6 +58,7 @@
             <property name="name">file_save</property>
 	    <property name="label" translatable="yes">_Save</property>
           </object>
+	  <accelerator key="S" modifiers="GDK_CONTROL_MASK"/>
         </child>
         <child>
           <object class="GtkAction" id="file_save_as">
@@ -64,6 +66,7 @@
             <property name="name">file_save_as</property>
             <property name="label" translatable="yes">Save _As...</property>
           </object>
+	  <accelerator key="S" modifiers="GDK_CONTROL_MASK | GDK_SHIFT_MASK"/>
         </child>
         <child>
           <object class="GtkAction" id="file-information">
