--- a/src/ui/gui/output-viewer.ui
+++ b/src/ui/gui/output-viewer.ui
@@ -15,6 +15,7 @@
             <property name="stock-id">file-print</property>
             <property name="label" translatable="yes">_Print...</property>
           </object>
+	  <accelerator key="P" modifiers="GDK_CONTROL_MASK"/>
         </child>
         <child>
           <object class="GtkAction" id="file_export">
